# Computer-Vision-2

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: ALGORITHM.md  USAGE.md  report.md
fruitseg/: __init__.py  classify.py  color_space.py  evaluation.py  features.py  pipeline.py  postprocess.py  preprocessing.py  split_merge.py
notebooks/: demo.ipynb
results/: .gitkeep  eval_10fruit.csv  eval_3fruit.csv  eval_5fruit.csv  training_scan.csv
scripts/: make_slides.py  run.py  run_all.py  selftest.py
