[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fruit-segmentation"  # distribution name (import package: fruitseg)
version = "1.0.0"
description = "HSV split-and-merge fruit segmentation (Computer Vision Assignment 2)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "opencv-python>=4.6",
    "scipy>=1.9",
]

[project.optional-dependencies]
notebook = ["matplotlib>=3.5", "jupyter", "nbformat"]

[tool.setuptools]
packages = ["fruitseg"]
